improve about nav for mobiles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
       {{ content }}
     </div>
 
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+    <label for="sidebar-checkbox" class="sidebar-toggle">
+      <i class="fa fa-bars"></i>
+    </label>
 
     <script>
       (function(document) {
