Add strong and northern tshirt

--- a/css/_sass/_about.css.scss
+++ b/css/_sass/_about.css.scss
@@ -44,7 +44,7 @@
     background:#fff;
     color:#000;
   }
-  @include media-query (sm-max) {
+  @include media-query (xs-max) {
     .masthead-title {
       display:none;
     }
