update google tasks blog post

--- a/css/_sass/_base.css.scss
+++ b/css/_sass/_base.css.scss
@@ -67,8 +67,11 @@ h4, h5, h6 {
 p, img, .fitvids {
   margin-top: 0;
   margin-bottom: 20px;
-  @include media-query (md) {
+  @include media-query (xs) {
     margin-bottom: 30px;
+  }
+  @include media-query (md) {
+    margin-bottom: 40px;
   }
 }
 
@@ -194,6 +197,18 @@ img {
   display: block;
   max-width: 100%;
   border-radius: 5px;
+}
+img.small {
+  @include media-query (sm) {
+    max-width: 450px;
+    text-align: center;
+    display: inline-block;
+    margin-left: 60px;
+    float: none;
+  }
+  @include media-query (md) {
+    margin-left:120px;
+  }
 }
 
 /* Tables */
