--- a/css/rw.scss
+++ b/css/rw.scss
@@ -2,6 +2,7 @@
 @import '_sass/base.css.scss';
 @import '_sass/font-awesome.css.scss';
 @import '_sass/typography.css.scss';
+@import '_sass/buttons.css.scss';
 @import '_sass/syntax.css.scss';
 @import '_sass/pagination.css.scss';
 @import '_sass/grid.css.scss';
