--- a/css/rw.css
+++ b/css/rw.css
@@ -32,7 +32,8 @@ h4, h5, h6 { margin-top: 1rem; font-size: 1rem; }
 
 /* Body text */
 p, img, .fitvids { margin-top: 0; margin-bottom: 20px; }
-@media only screen and (min-width: 954px) { p, img, .fitvids { margin-bottom: 30px; } }
+@media only screen and (min-width: 450px) { p, img, .fitvids { margin-bottom: 30px; } }
+@media only screen and (min-width: 954px) { p, img, .fitvids { margin-bottom: 40px; } }
 
 strong { color: #303030; }
 
@@ -82,6 +83,9 @@ blockquote p:last-child { margin-bottom: 0; }
 
 @media (min-width: 30em) { blockquote { padding-right: 5rem; padding-left: 1.25rem; } }
 img { display: block; max-width: 100%; border-radius: 5px; }
+
+@media only screen and (min-width: 769px) { img.small { max-width: 450px; text-align: center; display: inline-block; margin-left: 60px; float: none; } }
+@media only screen and (min-width: 954px) { img.small { margin-left: 120px; } }
 
 /* Tables */
 table { margin-bottom: 1rem; width: 100%; border: 1px solid #e5e5e5; border-collapse: collapse; }
@@ -1226,6 +1230,8 @@ a { color: #000; }
 
 .read-more-link, .cta { font-weight: bold; border-bottom: 2px solid #000; }
 .read-more-link:hover, .cta:hover { text-decoration: none; border-bottom-color: #ccc; }
+
+a.btn, .post p a.btn { display: inline-block; padding: 10px 17px; font-weight: bold; border: 2px solid #000; }
 
 .highlight .hll { background-color: #ffc; }
 
