--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -38,7 +38,9 @@ body-class: 'blog'
       {% endif %}
       <a href="{{ site.baseurl }}{{ post.url }}">
         <h3 class="post-title">{{ post.title }}</h3>
+        {% comment %}
         <small>{{ post.date | date_to_string }}</small>
+        {% endcomment %}
       </a>
     </div>
 
