--- a/css/rw.css
+++ b/css/rw.css
@@ -35,7 +35,6 @@ h4, h5, h6 { margin-top: 1rem; font-size: 1rem; }
 /* Body text */
 p, img, .fitvids { margin-top: 0; margin-bottom: 20px; }
 @media only screen and (min-width: 450px) { p, img, .fitvids { margin-bottom: 30px; } }
-@media only screen and (min-width: 954px) { p, img, .fitvids { margin-bottom: 40px; } }
 
 strong { color: #303030; }
 
@@ -84,7 +83,7 @@ blockquote { padding: .5rem 1rem; margin: .8rem 0; color: #7a7a7a; border-left: 
 blockquote p:last-child { margin-bottom: 0; }
 
 @media (min-width: 30em) { blockquote { padding-right: 5rem; padding-left: 1.25rem; } }
-img { display: block; max-width: 100%; border-radius: 5px; }
+img { display: block; max-width: 100%; /* border-radius: 5px; */ }
 
 @media only screen and (min-width: 769px) { img.small { max-width: 450px; text-align: center; display: inline-block; margin-left: 60px; float: none; } }
 @media only screen and (min-width: 954px) { img.small { margin-left: 120px; } }
