style all posts link

--- a/css/_sass/_about.css.scss
+++ b/css/_sass/_about.css.scss
@@ -282,3 +282,11 @@ a.next-link {
     display:none;
   }
 }
+
+.get-in-touch {
+  width: 100%;
+  text-align: center;
+  margin: 50px 0;
+  clear: both;
+  float: left;
+}
