--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
           Designer, illustrator and maker of things. Creative Director at <a href="http://yoomee.com" target="_blank">Yoomee</a>. Christian, husband, dad, cyclist. Sheffield, UK.
         </p>
         <a href="{{ site.baseurl }}/about" class="cta">Tell me more</a>
+
       </div>
       <div class="col-1-4 col-play">
         <h3>Work &amp; play</h3>
@@ -65,4 +66,7 @@
     </div>
 
   </div>
+  <p class="copyright">
+    &copy; Rich Wells {{ site.time | date: '%Y' }}. All rights reserved.
+  </p>
 </div>
