--- a/_includes/tag-links.html
+++ b/_includes/tag-links.html
@@ -11,6 +11,6 @@
     <li><a class="tag-link-inspiration" href="{{ site.baseurl }}/tag/inspiration">inspiration</a></li>
     <li><a class="tag-link-thoughts" href="{{ site.baseurl }}/tag/thoughts">thoughts</a></li>
     <li><a class="tag-link-yoomee" href="{{ site.baseurl }}/tag/yoomee">yoomee</a></li>
-    <li><a class="tag-link-tfbloggers" href="{{ site.baseurl }}/tag/tfbloggers">#tfbloggers</a></li>
+    <li><a class="tag-link-tfbloggers" href="{{ site.baseurl }}/tag/tfbloggers">cambodia</a></li>
   </ul>
 </div>
