--- a/css/_sass/_blog.css.scss
+++ b/css/_sass/_blog.css.scss
@@ -25,10 +25,27 @@
 }
 
 .all-posts-link {
-  font-size: 19px;
-  border-bottom: 1px solid #000;
-  margin: 7px 0 40px 40px;
+  font-size: 16px;
+  border-bottom: 1px solid #999;
+  margin: 0 0 0 -30px;
+  position: absolute;
+  display: block;
   float: left;
+  top: 19px;
+  padding: 0 1px;
+  right: 19%;
+  color: #999;
+  @include media-query (sm) {
+    right: 52%;
+    margin: 0 0 0 -46px;
+  }
+  .fa {
+    margin-right:2px;
+  }
+  &:hover {
+    text-decoration: none;
+    color:#000;
+  }
 }
 
 /* Blog post or page title */
