--- a/css/_sass/_grid.css.scss
+++ b/css/_sass/_grid.css.scss
@@ -63,6 +63,18 @@ $pad: 30px;
   }
 }
 
+
+.related-strip .grid .col-related {
+  @include media-query (sm-max) {
+    width: 50%;
+    padding:0px 10px;
+  }
+  @include media-query (xs-max) {
+    width: 100%;
+    padding:0px;
+  }
+}
+
 /* Opt-in outside padding */
 .grid-pad {
   padding: $pad 0 $pad $pad;
@@ -78,5 +90,6 @@ $pad: 30px;
     width: 960px;
     max-width: 960px;
     margin-left: -120px;
+    margin-top:50px;
   }
 }
