--- a/css/_sass/_typography.css.scss
+++ b/css/_sass/_typography.css.scss
@@ -7,7 +7,7 @@ body {
 }
 
 html {
-  font-family: "Karla", Georgia, "Times New Roman", serif;
+  font-family: "Karla", helvetica, Arial, sans-serif;
   color:#515151;
 }
 
