--- a/css/rw.css
+++ b/css/rw.css
@@ -33,8 +33,10 @@ h3 { margin-top: 1.5rem; font-size: 1.25rem; }
 h4, h5, h6 { margin-top: 1rem; font-size: 1rem; }
 
 /* Body text */
-p, img, .fitvids { margin-top: 0; margin-bottom: 20px; }
-@media only screen and (min-width: 450px) { p, img, .fitvids { margin-bottom: 30px; } }
+p, img, .fitvids, video { margin-top: 0; margin-bottom: 20px; }
+@media only screen and (min-width: 450px) { p, img, .fitvids, video { margin-bottom: 30px; } }
+
+video { width: 100%; }
 
 strong { color: #303030; }
 
@@ -1214,7 +1216,7 @@ tbody tr:nth-child(odd) td, tbody tr:nth-child(odd) th { background-color: #f9f9
 
 html, body { overflow-x: hidden; margin: 0; padding: 0; }
 
-html { font-family: "Karla", Georgia, "Times New Roman", serif; color: #515151; }
+html { font-family: "Karla", helvetica, Arial, sans-serif; color: #515151; }
 
 h1, h2, h3, h4, h5, h6 { font-family: "Karla", Helvetica, Arial, sans-serif; font-weight: 600; color: #313131; letter-spacing: -.025rem; }
 
@@ -1462,11 +1464,14 @@ a.pagination-item:hover { background-color: #f5f5f5; }
 
 @media only screen and (max-width: 768px) { [class*='col-'] { width: 100%; padding: 0; } }
 
+@media only screen and (max-width: 953px) { .related-strip .grid .col-related { width: 50%; padding: 0px 10px; } }
+@media only screen and (max-width: 768px) { .related-strip .grid .col-related { width: 100%; padding: 0px; } }
+
 /* Opt-in outside padding */
 .grid-pad { padding: 30px 0 30px 30px; }
 .grid-pad [class*='col-']:last-of-type { padding-right: 30px; }
 
-@media only screen and (min-width: 954px) { .wide { width: 960px; max-width: 960px; margin-left: -120px; } }
+@media only screen and (min-width: 954px) { .wide { width: 960px; max-width: 960px; margin-left: -120px; margin-top: 50px; } }
 
 #scrollUp { bottom: 20px; right: 20px; padding: 10px 20px; background-color: #fff; color: #333; border: 2px solid #000; }
 
@@ -1559,7 +1564,7 @@ ul.header-nav li a i { font-size: 22px; line-height: 30px; }
 .sidebar-social { float: left; width: 100%; clear: both; padding-left: 20px; }
 .sidebar-social i { font-size: 18px; margin-right: 3px; }
 
-.footer { border-top: 1px solid #eee; float: left; width: 100%; }
+.footer { background: #fff; border-top: 1px solid #000; float: left; width: 100%; }
 
 .footer-list, .footer-list li { list-style-type: none; margin: 0; padding: 0; }
 .footer-list a, .footer-list li a { border: none; }
@@ -1567,6 +1572,8 @@ ul.header-nav li a i { font-size: 22px; line-height: 30px; }
 .footer-container { max-width: 1400px; margin: 0 auto; padding: 40px; clear: both; }
 
 .col-networks, .col-play { float: right; }
+
+.copyright { font-size: 12px; margin: 20px 0; text-align: center; }
 
 /*=============================== Homepage  ================================*/
 /* Make nav have black bg for desktops */
@@ -1667,6 +1674,8 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 /* hide about thing in footer for mobile */
 @media only screen and (max-width: 953px) { .about .col-footer-about { display: none; } }
 
+.get-in-touch { width: 100%; text-align: center; margin: 50px 0; clear: both; float: left; }
+
 /*
 * Posts and pages
 *
@@ -1681,7 +1690,10 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 
 .post-preview img { width: 100%; }
 
-.all-posts-link { font-size: 19px; border-bottom: 1px solid #000; margin: 7px 0 40px 40px; float: left; }
+.all-posts-link { font-size: 16px; border-bottom: 1px solid #999; margin: 0 0 0 -30px; position: absolute; display: block; float: left; top: 19px; padding: 0 1px; right: 19%; color: #999; }
+@media only screen and (min-width: 769px) { .all-posts-link { right: 52%; margin: 0 0 0 -46px; } }
+.all-posts-link .fa { margin-right: 2px; }
+.all-posts-link:hover { text-decoration: none; color: #000; }
 
 /* Blog post or page title */
 .page-title, .post-title, .post-title a { color: #303030; }
