--- a/css/_sass/_base.css.scss
+++ b/css/_sass/_base.css.scss
@@ -198,7 +198,7 @@ blockquote p:last-child {
 img {
   display: block;
   max-width: 100%;
-  /* border-radius: 5px; */
+  border-radius: 4px;
 }
 img.small {
   @include media-query (sm) {
