--- a/css/rw.css
+++ b/css/rw.css
@@ -1477,6 +1477,12 @@ a.pagination-item:hover { background-color: #f5f5f5; }
 
 .w100 { width: 100%; }
 
+.sig { margin: 50px auto 120px; width: 110px; }
+@media only screen and (min-width: 954px) { .sig { width: 150px; } }
+
+h2.sig-title { font-weight: normal; text-align: center; line-height: 1.2; font-size: 20px; margin: 30px 10px; }
+@media only screen and (min-width: 769px) { h2.sig-title { font-size: 40px; margin: 70px 0; } }
+
 /* Navigation stuff */
 /*
 * Masthead
@@ -1742,7 +1748,7 @@ ul.blog-tag-list a { display: block; float: left; background: #fff; padding: 3px
 
 .blog-index ul.blog-tag-list a { background: #f5f5f5; }
 
-.tag-photos a.tag-link-photos, .tag-illustration a.tag-link-illustrations, .tag-work a.tag-link-work, .tag-thoughts a.tag-link-thoughts, .tag-sketches a.tag-link-sketches, .tag-yoomee a.tag-link-yoomee, .tag-video a.tag-link-video, .blog-index .tag-everything a.tag-link-everything, .tag-tfbloggers a.tag-link-tfbloggers, .tag-ux a.tag-link-ux, .tag-inspiration a.tag-link-inspiration { background: #000; color: #fff; }
+.tag-photos a.tag-link-photos, .tag-illustration a.tag-link-illustrations, .tag-work a.tag-link-work, .tag-thoughts a.tag-link-thoughts, .tag-sketches a.tag-link-sketches, .tag-yoomee a.tag-link-yoomee, .tag-video a.tag-link-video, .blog-index .tag-everything a.tag-link-everything, .tag-travels a.tag-link-travels, .tag-ux a.tag-link-ux, .tag-inspiration a.tag-link-inspiration { background: #000; color: #fff; }
 
 .tag-strip { background: #fff; }
 
@@ -1758,9 +1764,11 @@ body.yoomee { background: #FC986D; }
 
 body.video { background: #6dff99; }
 
-body.tfbloggers { background: #79c9d6; }
+body.travels { background: #79c9d6; }
 
-body.ux { background: #BFABF9; }
+body.ux { background: #BFABF9; background: #FFDA46; }
+
+body.thoughts { background: #97DD75; }
 
 .storytime { background-color: #fff; padding: 20px; }
 
