change related post font weight

--- a/css/_sass/_blog.css.scss
+++ b/css/_sass/_blog.css.scss
@@ -132,8 +132,10 @@
 }
 .col-related {
   h3 {
-    margin:0;
-    font-size:20px;
+    margin: 0;
+    font-size: 20px;
+    font-weight: normal;
+    color: #000;
   }
   small {
     color: #999;
