--- a/css/_sass/_general.css.scss
+++ b/css/_sass/_general.css.scss
@@ -27,3 +27,12 @@ h2.sig-title {
     margin:70px 0;
   }
 }
+.alert {
+  padding: 15px;
+  background: #FFF0A4;
+  color: #000;
+  margin: 0 0 20px;
+  p, h3  {
+    margin: 0;
+  }
+}
