--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,12 @@
   <script type="text/javascript" src="{{ site.baseurl }}/js/isotope.js"></script>
 
 
+
+  {% if page.head-content %}
+    <!-- head content -->
+    {{ page.head-content }}
+  {% endif %}
+
   <!-- Google Analytics -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
