--- a/css/_sass/_base.css.scss
+++ b/css/_sass/_base.css.scss
@@ -50,7 +50,11 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 h1 {
-  font-size: 2rem;
+  font-size: 28px;  
+  @include media-query (xs) {
+    font-size: 2rem;
+  }
+
 }
 h2 {
   margin-top: 1rem;
