--- a/css/_sass/_grid.css.scss
+++ b/css/_sass/_grid.css.scss
@@ -57,7 +57,7 @@ $pad: 30px;
 // remove padding for mobile
 
 [class*='col-'] {
-  @include media-query (xs-max) {
+  @include media-query (xxs-max) {
     width:100%;
     padding:0;
   }
@@ -69,7 +69,7 @@ $pad: 30px;
     width: 50%;
     padding:0px 10px;
   }
-  @include media-query (xs-max) {
+  @include media-query (xxs-max) {
     width: 100%;
     padding:0px;
   }
