--- a/css/rw.scss
+++ b/css/rw.scss
@@ -14,3 +14,4 @@
 @import '_sass/blog.css.scss';
 @import '_sass/tag_links.css.scss';
 @import '_sass/storytime.css.scss';
+@import '_sass/blog_content.css.scss';
