--- a/css/_sass/_blog.css.scss
+++ b/css/_sass/_blog.css.scss
@@ -62,8 +62,9 @@
 
 /* Meta data line below post title */
 .post-date {
+  visibility:hidden;
   display: block;
-  margin-top: -.5rem;
+  margin-top: -30px;
   margin-bottom: 1rem;
   color: #9a9a9a;
 }
