--- a/css/rw.css
+++ b/css/rw.css
@@ -1710,7 +1710,7 @@ a.next-link { text-align: center; width: 100%; font-size: 18px; line-height: 2; 
 .page-title, .post-title { margin-top: 0; clear: both; }
 
 /* Meta data line below post title */
-.post-date { display: block; margin-top: -.5rem; margin-bottom: 1rem; color: #9a9a9a; }
+.post-date { visibility: hidden; display: block; margin-top: -30px; margin-bottom: 1rem; color: #9a9a9a; }
 
 /* Related posts */
 .related { padding-top: 2rem; padding-bottom: 2rem; border-top: 1px solid #eee; }
