--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item sidebar-blog {% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/projects/">Projects</a>
-    <a class="sidebar-nav-item sidebar-about" href="{{ site.baseurl }}/about">About me</a>
+    <a class="sidebar-nav-item sidebar-about" href="{{ site.baseurl }}/">About me</a>
     <a href="http://twitter.com/richwells" class="twitter sidebar-social" target="_blank"> <i class="fa fa-twitter"></i>
       <span>Twitter</span></a>
     <a href="http://instagram.com/richwells" class="instagram sidebar-social" target="_blank"> <i class="fa fa-instagram"></i> <span> Instagram</span></a>
