--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -28,12 +28,12 @@ body-class: 'blog'
       <a href="{{ site.baseurl }}{{ post.url }}">
         <span class="post-img-wrap">
           {% if post.thumbnail %}
-            <!-- <img src="http://ir0.mobify.com/500/http://richwells.me{{ site.baseurl }}/downloads/{{ post.thumbnail }} " alt="{{ post.title}}"> -->
-            <img src="{{ site.baseurl }}/downloads/{{ post.thumbnail }} " alt="{{ post.title}}">
+            <img src="http://ir0.mobify.com/500/http://richwells.me{{ site.baseurl }}/downloads/{{ post.thumbnail }} " alt="{{ post.title}}">
+            <!-- <img src="{{ site.baseurl }}/downloads/{{ post.thumbnail }} " alt="{{ post.title}}"> -->
           </span>
           {% elsif post.img %}
-          <!-- <img src="http://ir0.mobify.com/500/http://richwells.me{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}"> -->
-          <img src="{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
+          <img src="http://ir0.mobify.com/500/http://richwells.me{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}">
+          <!-- <img src="{{ site.baseurl }}/downloads/{{post.img}}" alt="{{ post.title }}"> -->
           {% endif %}
         </span>
       </a>
